[package]
name = "nanomap"
version = "0.0.1"
edition = "2024"
description = "A fast small-scale hashmap."
readme = "README.md"
repository = "https://github.com/owtotwo/nanomap"
homepage = "https://github.com/owtotwo/nanomap"
documentation = "https://docs.rs/nanomap"
keywords = ["hash", "map", "hashmap", "no_std"]
license = "MIT OR Apache-2.0"

[dependencies]
